<resources>
    <string name="app_name">Xara</string>
    <string name="str_accounts">Accounts</string>
    <string name="xara_title">XARA</string>
    <string name="username_textview_hint">Username/email</string>
    <string name="password_textview_hint">Password</string>
    <string name="login_button_text">Log in</string>
    <string name="switch_text">Keep me signed in</string>
    <string name="logout_text">Log out</string>
    <string name="title_activity_landing">Landing</string>
    <string name="landing_text">Xara, efficient for managing your loans while tracking your savings to help you manage your funds</string>
    <string name="recent_activity_title">Recent Activities</string>
    <string name="recent_text">Transaction: 10,000 paid to loan account no 234DFFDS34.</string>
    <string name="loans">Loans</string>
    <string name="savings">Savings</string>
    <string name="top_up">Top Up</string>
    <string name="transact">Transact</string>
    <string name="title_activity_loan">LoanActivity</string>
    <string name="title_activity_loan_details">LoanDetailsActivity</string>
    <string name="apply_loan">Apply</string>
    <string name="save">Submit</string>
    <string name="pay_now_button_text">Pay now</string>
    <string name="title_activity_loan_application">LoanApplicationActivity</string>
    <string name="applied_loans_text">Applied Loans</string>
    <string name="confirm_payment">Confirm</string>
    <string name="cancel_payment">Cancel</string>
    <string name="view_loan">View</string>
    <string name="no_loans_here">No loans here</string>
    <string name="No_Savings_Here">No savings here</string>
    <string name="disp_month_string">months</string>
    <string-array name="period_metrics">
        <item>Month(s)</item>
        <item>Year(s)</item>
    </string-array>
    <string name="title_activity_savings">SavingsActivity</string>
    <string name="title_activity_saving_application">SavingApplicationActivity</string>
    <string name="title_activity_saving_details">SavingDetailsActivity</string>
</resources>
