<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context="com.softark.eddie.xara.activities.LoginActivity">

    <ImageView
        android:id="@+id/xara_logo"
        android:background="@drawable/xara_logo"
        android:layout_gravity="center"
        android:layout_marginTop="16sp"
        android:layout_width="341.7sp"
        android:layout_height="215sp"
        />

    <EditText
        android:id="@+id/username_editext"
        android:layout_marginTop="16sp"
        android:minWidth="328sp"
        android:hint="@string/username_textview_hint"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/password_editext"
        android:layout_marginTop="32sp"
        android:minWidth="328sp"
        android:inputType="textPassword"
        android:hint="@string/password_textview_hint"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Switch
        android:id="@+id/remember_me_switch"
        android:text="@string/switch_text"
        android:textStyle="bold"
        android:splitTrack="false"
        android:layout_marginTop="16sp"
        android:layout_gravity="center"
        android:textColor="@color/colorGrayAccent"
        android:layout_width="200sp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/login_button"
        style="@style/LoginButtonText"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>
