<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_landing"
    android:background="@color/colorAccent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.softark.eddie.xara.activities.SummaryActivity"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <!--<android.support.design.widget.AppBarLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<include-->
            <!--layout="@layout/toolbar_main"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"/>-->

    <!--</android.support.design.widget.AppBarLayout>-->

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16sp"
        android:layout_marginTop="16sp"
        android:layout_marginRight="16sp"
        app:cardElevation="4sp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20sp">

        <ImageView
            android:id="@+id/user_profile"
            android:src="@drawable/avatar"
            android:layout_width="60dp"
            android:layout_height="60dp" />

        <TextView
            android:id="@+id/username"
            android:text="Oirere Jr"
            android:layout_marginTop="12sp"
            android:layout_toRightOf="@+id/user_profile"
            android:layout_marginLeft="12sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/position"
            android:text="eoirere8@gmail.com"
            android:layout_toRightOf="@+id/user_profile"
            android:layout_below="@id/username"
            android:layout_marginLeft="12sp"
            android:layout_marginTop="4dp"
            android:textColor="@color/colorGrayAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="Account summary"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/savings_summary"
            android:layout_width="176sp"
            android:layout_height="160sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="16sp"
            app:cardElevation="4sp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/total_savings"
                    android:text="20,000"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:textColor="@color/savingsSummaryText"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40sp"
                    android:layout_marginBottom="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/savings_button"
                    android:text="@string/savings"
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="@color/savingsSummaryText"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/account_summary"
            android:layout_toRightOf="@+id/savings_summary"
            android:layout_width="160sp"
            android:layout_height="160sp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="16sp"
            app:cardElevation="4sp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/total_loans"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:textColor="@color/loanSummaryText"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40sp"
                    android:layout_marginBottom="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/loans_button"
                    android:text="@string/loans"
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="@color/loanSummaryText"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <!--<Button-->
        <!--android:text="My Account"-->
        <!--android:textColor="@color/colorAccent"-->
        <!--android:backgroundTint="@color/colorPrimary"-->
        <!--android:layout_marginLeft="16sp"-->
        <!--android:layout_below="@+id/account_summary"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content" />-->

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16sp">

        <TextView
            android:id="@+id/recent_activity_title"
            android:textSize="20sp"
            android:text="@string/recent_activity_title"
            android:textColor="@color/colorGrayAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/recent_text"
            android:textSize="16sp"
            android:layout_marginTop="16sp"
            android:textColor="@color/colorGrayAccent"
            android:layout_below="@+id/recent_activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</LinearLayout>
